<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewOdd_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb010"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textViewOdd_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy000"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textViewOdd_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy000"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewOdd_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy010"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textViewOdd_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb000"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textViewOdd_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb000"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewOdd_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy010"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textViewOdd_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb000"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewOdd_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_weight="1"/>
    </TableRow>
</TableLayout>
