<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView6_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb001"
            android:textColor="@color/t_black"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView6_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy000"
            android:textColor="@color/t_black"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView6_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy000"
            android:textColor="@color/t_black"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView6_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy001"
            android:textColor="@color/t_white"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView6_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb000"
            android:textColor="@color/t_white"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView6_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb000"
            android:textColor="@color/t_white"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView6_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb001"
            android:textColor="@color/t_black"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView6_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy000"
            android:textColor="@color/t_black"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView6_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy000"
            android:textColor="@color/t_black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_weight="1"/>
    </TableRow>
</TableLayout>
