<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView22_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb000"
            android:textColor="@color/t_yellow"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView22_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy000"
            android:textColor="@color/t_yellow"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView22_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy000"
            android:textColor="@color/t_yellow"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView22_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb000"
            android:textColor="@color/t_yellow"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView22_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy000"
            android:textColor="@color/t_yellow"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView22_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy000"
            android:textColor="@color/t_yellow"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView22_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmy100"
            android:textColor="@color/t_yellow"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView22_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb000"
            android:textColor="@color/t_yellow"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView22_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rgb000"
            android:textColor="@color/t_yellow"
            android:gravity="center"
            android:layout_weight="1"/>
    </TableRow>
</TableLayout>
